- Fixed cycle.html, inprogress.html and completed.html to scale on smaller devices

--- a/LOOP/www/css/style.css
+++ b/LOOP/www/css/style.css
@@ -49,52 +49,6 @@ ion-list.manual-list-fullwidth div.list> .item, .list.card.manual-card-fullwidth
     background: url('../img/login-bg-op60.jpg') no-repeat center;
     background-size: auto 100%;
 }
-
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
 .center-vertical {
     display: -webkit-box;
     display: -moz-box;
@@ -125,8 +79,7 @@ ion-list.manual-list-fullwidth div.list> .item, .list.card.manual-card-fullwidth
     -ms-flex-align: center;
     align-items: center;
 }
-
-.center-vertical > * {
+.center-vertical> * {
     -webkit-box-ordinal-group: 1;
     -moz-box-ordinal-group: 1;
     -webkit-order: 0;
@@ -144,7 +97,9 @@ ion-list.manual-list-fullwidth div.list> .item, .list.card.manual-card-fullwidth
 .button-stretch {
     width: 100%;
 }
-
 .col-offset-15 {
     margin-left: 15%;
+}
+.ionic_ratings .icon {
+    font-size: 50px;
 }
